--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width:device-width,initial-scale:1.0">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<script defer type="text/javascript" src="static/main.js"></script>
 	<link rel="stylesheet" href="static/main.css">
 </head>
