--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 	<header>
 		bal;ahvbskaqhs
+		<button class="reset_grid">Reset the grid</button>
 	</header>
 	<main>
 		<div class="grid_container">
