add: resize grid function + adjusment to the layout

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 					<input type="color" id="color">
 				</label>
 				<button class="btn" id="resizeBtn">Resize the grid</button>
+				<button class="reset_grid">Clear</button>
 			</div>
-			<button class="reset_grid">Reset the grid</button>
 		</div>
 	</main>
 </body>
