add: modal struct it can be opened or closed

--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
 				<button class="reset_grid">Clear</button>
 			</div>
 		</div>
+		<div id="resize_modal" class="modal">
+			<div class="modal_content">
+				<div class="modal_title">
+					RESIZE GRID PANEL
+					<span class="close">
+						&times;
+					</span>
+				</div>
+				<div>
+					<div>
+						CELL DEMO
+					</div>
+					<div>
+						CELL PARAM
+					</div>
+				</div>
+			</div>
+		</div>
 	</main>
 </body>
 
