--- a/index.html
+++ b/index.html
@@ -38,12 +38,22 @@
 						&times;
 					</span>
 				</div>
-				<div>
-					<div>
-						CELL DEMO
+				<div class="modal_info">
+					<div id="resize_demo">
+						Cell exemple
+						<br>
+						<div id="demo_div">
+						</div>
 					</div>
 					<div>
 						CELL PARAM
+						<label>
+							cell dimension
+							<input type="number" id="cellInputDimension" min="5" max="100">
+						</label>
+						<label>
+							cell dimension
+						</label>
 					</div>
 				</div>
 			</div>
