modif: changement in the html file for the resize modal

--- a/index.html
+++ b/index.html
@@ -48,11 +48,17 @@
 					<div>
 						CELL PARAM
 						<label>
-							cell dimension
-							<input type="number" id="cellInputDimension" min="5" max="100">
+							grid dimension in pixel
+							<select id="gridDimension">
+								<option value="480">480px</option>
+								<option value="580">580px</option>
+								<option value="780">780px</option>
+								<option value="980">980px</option>
+							</select>
 						</label>
 						<label>
-							cell dimension
+							Grid dimension (cells)
+							<input type="number" id="cellNumber">
 						</label>
 					</div>
 				</div>
